fixes height on safari bug

--- a/src/Layout/Feedback/Feedback.scss
+++ b/src/Layout/Feedback/Feedback.scss
@@ -52,7 +52,7 @@
         display: inline-block;
         width: 48px;
         height: 48px;
-        background-color: transparent !important;;
+        background-color: white !important;;
         border: 1px solid black;
         background-image: radial-gradient(
           circle 14px,
